oops forgot to checkout branch

--- a/.github/workflows/update_usaco.yml
+++ b/.github/workflows/update_usaco.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Run auto updates
         run: |
           git branch auto
+          git checkout auto
           npm ci 
           source run.sh || source create_pr.sh
         env:
