can't trigger one workflow from another

--- a/.github/workflows/autofetch.yml
+++ b/.github/workflows/autofetch.yml
@@ -23,4 +23,14 @@ jobs:
           source run.sh || source push.sh
         env:
           GITHUB_TOKEN: ${{ github.token }}
+      - name: Ping usaco-guide
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.actions.createWorkflowDispatch({
+              owner: devo1ution,
+              repo: usaco-guide,
+              workflow_id: 'update-usaco.yml',
+              ref: 'algolia',
+            })
     
