--- a/.github/workflows/autofetch.yml
+++ b/.github/workflows/autofetch.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           script: |
             github.rest.actions.createWorkflowDispatch({
-              owner: devo1ution,
-              repo: usaco-guide,
+              owner: 'devo1ution',
+              repo: 'usaco-guide',
               workflow_id: 'update-usaco.yml',
               ref: 'algolia',
             })
