--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/cpinitiative/usaco-problems#readme",
   "dependencies": {
+    "algoliasearch": "^4.22.0",
     "axios": "^1.6.2",
     "prettier": "^3.1.1",
     "ts-node": "^10.9.2",
