--- a/.github/workflows/autofetch.yml
+++ b/.github/workflows/autofetch.yml
@@ -21,8 +21,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Run auto updates
         run: |
-          npm ci 
-          source run.sh
+          npm i 
+          npx ts-node --skipProject usaco_util.ts
           source push.sh
         env:
           GITHUB_TOKEN: ${{ github.token }}
